--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,202 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Ustalenie właściwości "box-sizing" dla wszystkich elementów */
+
+@import url('https://fonts.googleapis.com/css2?family=Saira+Semi+Condensed:wght@300;600&display=swap');
+* {
+  box-sizing: border-box;
+}
+
+/* Właściwości dla body */
+
+body {
+  font-family: 'Saira Semi Condensed', sans-serif;
+  font-size: 16px;
+  margin: 0;
+  height: 100vh;
+}
+
+app-root {
+  display: flex;
+  /* flex-direction: column - header, main, footer wyświetli się 
+  jeden pod drugim a nie domyślnie obok siebie */
+  flex-direction: column; 
+  height: 100%;
+}
+
+header {
+  text-align: center;
+  color: #ffffff;
+  background: #e74c3c;
+  padding-top:25px;
+  padding-bottom: 25px; 
+  /* border: 4px solid lightgrey; */
+}
+
+header h1 {
+  margin: 0;
+}
+
+main {
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: auto;
+}
+
+footer {
+  text-align: center;
+  font-size: medium;
+  border: none;
+}
+
+/* Klasa kontenera, która ma ograniczoną szerokość i wyśrodkowuje content */
+
+/* Ustawienie lewego i prawego marginesu na "auto" wyśrodkowuje kontener */
+
+.container {
+  margin: 0 auto;
+  width: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+a {
+  color: #777777;
+  text-decoration: none;
+  transition: all 0.5s;
+}
+
+a:hover {
+  color: #e74c3c;
+}
+
+/* Nadłówki */
+
+h2 {
+  text-transform: uppercase;
+  font-weight: 400;
+  border-bottom: 2px solid black;
+}
+
+/* Tabele */
+
+table {
+  width: 100%;
+}
+
+table th, table td {
+  padding: 8px;
+  text-align: left;
+  font-weight: bold;
+  /* border: 1px solid lightgrey; */
+}
+
+/* Cieniujemy co drugi (parzysty) wiersz tabeli */
+
+/* Używamy tbody, aby upewnić się, że nie cieniujemy nagłówka - to zachowuje kolejność cieniowania */
+
+table tbody>tr:nth-child(odd) {
+  background: #eeeeee;
+}
+
+/* Przyciski */
+
+.button {
+  display: inline-block;
+  margin: 2px;
+  padding: 12px 30px 14px;
+  background: #999999;
+  border: 0;
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 16px;
+  font-family: inherit;
+  font-weight: 400;
+  line-height: 16px;
+  cursor: pointer;
+  transition: all 1s;
+}
+
+/* Przycisk po najechaniu kursorem */
+
+.button:hover {
+  background: #888888;
+  color: #ffffff;
+  /* padding: 50px 60px; */
+  /* transform: rotate(720deg); */
+}
+
+/* Przycisk w stanie aktywnym */
+
+.button:active, .button:focus {
+  background: #777777;
+}
+
+/* Przycisk w kolorze zielonym */
+
+.button-green {
+  background: #33cc55;
+  color: #ffffff;
+}
+
+
+.button-green:hover {
+  background: #80838d;
+}
+
+.button-green:active, .button-green:focus {
+  background: #80838d;
+}
+
+/* Przycisk w kolorze czerwonym */
+
+.button-red {
+  background: #e74c3c;
+}
+
+.button-red:hover {
+  background: #80838d;
+}
+
+.button-red:active, .button-red:focus {
+  background: #80838d;
+}
+
+/* Styl klasy new-student przeniesiony do students.component.css */
+
+/* Formularze */
+
+input {
+  height: 44px;
+  border: 1px solid #cecece;
+  font-size: 16px;
+  color: #53555e;
+  padding-left: 8px;
+  padding-right: 8px;
+}
+
+input:active, input:focus {
+  border: 1px solid #80838d;
+  outline: none;
+}
+
+footer {
+  background: #262933;
+  color: #bab9b9;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  text-align: center;
+}
+
+/* Media Query dla urządzeń o minimalnej szerokości 992px */
+
+/* czyli dla komputerów stacjonarnych */
+
+@media (min-width: 992px) {
+  .button {
+    color: #ffffff;
+  }
+  .container {
+    max-width: 960px;
+  }
+}
