Adding new student extracted to new component; addind div in my own vertical layout

--- a/src/app/student-edit/student-edit.component.html
+++ b/src/app/student-edit/student-edit.component.html
@@ -6,6 +6,11 @@
       <label for="name">Imię i nazwisko:</label>
       <input type="text" id="name" [(ngModel)]="student.name">
     </div>
+
+    <div>
+      <label for="username">Nazwa użytkownika:</label>
+      <input type="text" id="username" [(ngModel)]="student.username">
+    </div>
   
     <div>
       <label for="email">Adres e-mail:</label>
