--- a/src/app/students/students.component.html
+++ b/src/app/students/students.component.html
@@ -4,6 +4,7 @@
         <tr>
           <th>#</th>
           <th>Imię i nazwisko</th>
+          <th>Nazwa użytkownika</th>
           <th>Adres e-mail</th>
           <th>Akcje</th>
         </tr>
@@ -13,6 +14,7 @@
         <tr *ngFor="let student of students">
             <td>{{student.id}}</td>
             <td>{{student.name}}</td>
+            <td>{{student.username}}</td>
             <td>
               <a href="mailto:{{student.email}}">{{student.email}}</a>
             </td>
@@ -23,16 +25,5 @@
           </tr>
       </tbody>
     </table>
-    <div class="new-student">
-      <h2>Dodaj nowego studenta:</h2>
-      <label for="name">Imię i nazwisko:</label>
-      <input type="text" id="name" #name>
-    
-      <label for="email">Adres e-mail:</label>
-      <input type="email" id="email" #email>
-    
-      <button 
-      class="button button-green"
-      (click)="add(name.value, email.value); name.value=''; email.value=''">Dodaj</button>
-    </div>
+<app-student-new [students]="students"></app-student-new>
   </section>
