--- a/src/app/student-new/student-new.component.html
+++ b/src/app/student-new/student-new.component.html
@@ -20,7 +20,7 @@
         <td>
           <button
             class="button button-green"
-            (click)="add(name.value, email.value, username.value); name.value=''; email.value=''; username.value=''"
+            (click)="add(name.value, username.value, email.value); name.value=''; email.value=''; username.value=''"
           >
             Dodaj
           </button>
